-fixed some misspellings

--- a/src/main/resources/assets/choups_cyber_dogs/lang/en_us.json
+++ b/src/main/resources/assets/choups_cyber_dogs/lang/en_us.json
@@ -23,7 +23,7 @@
   "item.choups_cyber_dogs.cyber_dog_upgrade_2": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_2": " §7Activate the §9Lighning Module:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_2": " §7Activate the §9Lightning Module:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_3": "  §925% chance of striking a lightning on hit",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_4": "",
@@ -72,13 +72,13 @@
   "item.choups_cyber_dogs.short_circuit_sword.description_6": " §e[Self-Repair]",
   "item.choups_cyber_dogs.short_circuit_sword.description_1": "§7When an entity is hit:",
   "item.choups_cyber_dogs.short_circuit_sword.description_0": "",
-  "item.choups_cyber_dogs.short_circuit_sword.description_3": " §7Has a chance to strike down a lighting and slow your enemies.",
+  "item.choups_cyber_dogs.short_circuit_sword.description_3": " §7Has a chance to strike down a lightning and slow your enemies.",
   "item.choups_cyber_dogs.short_circuit_sword.description_2": " §e[Short-Circuit]",
   "subtitles.electric_shock": "",
   "item.choups_cyber_dogs.short_circuit_pickaxe.description_8": "",
   "item.choups_cyber_dogs.short_circuit_pickaxe.description_1": "§7When an entity is hit:",
   "item.choups_cyber_dogs.short_circuit_pickaxe.description_0": "",
-  "item.choups_cyber_dogs.short_circuit_pickaxe.description_3": " §7Has a chance to strike down a lighting and slow your enemies.",
+  "item.choups_cyber_dogs.short_circuit_pickaxe.description_3": " §7Has a chance to strike down a lightning and slow your enemies.",
   "item.choups_cyber_dogs.short_circuit_pickaxe.description_2": " §e[Short-Circuit]",
   "item.choups_cyber_dogs.short_circuit_pickaxe.description_5": "§7When right clicked:",
   "item.choups_cyber_dogs.short_circuit_pickaxe": "§aShort-Circuit Pickaxe",
@@ -88,7 +88,7 @@
   "item.choups_cyber_dogs.short_circuit_axe.description_0": "",
   "item.choups_cyber_dogs.short_circuit_axe.description_1": "§7When an entity is hit:",
   "item.choups_cyber_dogs.short_circuit_axe.description_2": " §e[Short-Circuit]",
-  "item.choups_cyber_dogs.short_circuit_axe.description_3": " §7Has a chance to strike down a lighting and slow your enemies.",
+  "item.choups_cyber_dogs.short_circuit_axe.description_3": " §7Has a chance to strike down a lightning and slow your enemies.",
   "item.choups_cyber_dogs.short_circuit_axe.description_4": "",
   "item.choups_cyber_dogs.short_circuit_axe.description_5": "§7When right clicked:",
   "item.choups_cyber_dogs.short_circuit_axe.description_6": " §e[Self-Repair]",
@@ -96,7 +96,7 @@
   "item.choups_cyber_dogs.short_circuit_axe.description_8": "",
   "item.choups_cyber_dogs.short_circuit_axe": "§aShort-Circuit Axe",
   "item.choups_cyber_dogs.short_circuit_shovel.description_2": " §e[Short-Circuit]",
-  "item.choups_cyber_dogs.short_circuit_shovel.description_3": " §7Has a chance to strike down a lighting and slow your enemies.",
+  "item.choups_cyber_dogs.short_circuit_shovel.description_3": " §7Has a chance to strike down a lightning and slow your enemies.",
   "item.choups_cyber_dogs.short_circuit_shovel.description_4": "",
   "item.choups_cyber_dogs.short_circuit_shovel.description_5": "§7When right clicked:",
   "item.choups_cyber_dogs.short_circuit_shovel.description_6": " §e[Self-Repair]",
@@ -105,7 +105,7 @@
   "item.choups_cyber_dogs.short_circuit_shovel.description_0": "",
   "item.choups_cyber_dogs.short_circuit_shovel": "§aShort-Circuit Shovel",
   "item.choups_cyber_dogs.short_circuit_shovel.description_1": "§7When an entity is hit:",
-  "item.choups_cyber_dogs.short_circuit_hoe.description_3": " §7Has a chance to strike down a lighting and slow your enemies.",
+  "item.choups_cyber_dogs.short_circuit_hoe.description_3": " §7Has a chance to strike down a lightning and slow your enemies.",
   "item.choups_cyber_dogs.short_circuit_hoe.description_4": "",
   "item.choups_cyber_dogs.short_circuit_hoe.description_5": "§7When right clicked:",
   "item.choups_cyber_dogs.short_circuit_hoe.description_6": " §e[Self-Repair]",
