--- a/src/main/resources/assets/choups_cyber_dogs/lang/en_us.json
+++ b/src/main/resources/assets/choups_cyber_dogs/lang/en_us.json
@@ -10,7 +10,7 @@
   "subtitles.cyberdoghurt": "",
   "item.choups_cyber_dogs.strange_circuit.description_4": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade.description_3": "  §9Inflicts fire on hit",
-  "item.choups_cyber_dogs.cyber_dog_upgrade.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_dog_upgrade.description_2": " §7Activate the §9Fiery Module",
   "item.choups_cyber_dogs.cyber_dog_upgrade": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade.description_0": "",
@@ -18,11 +18,11 @@
   "entity.choups_cyber_dogs.cyber_dog_01": "Cyber Dog",
   "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_3": "  §9+15% Speed",
   "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_2": " §7Activate the §9Speed Module:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_2": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_0": "",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_2": " §7Activate the §9Lightning Module:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_3": "  §925% chance of striking a lightning on hit",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3": "Cyber Dog Upgrade",
@@ -32,16 +32,16 @@
   "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_4": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_4": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_0": "",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_2": " §7Activate the §9Health Module:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_3": "  §9+10 Hearts",
   "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_2": " §7Activate the §9NUKE Module:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_5": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_4": "  §cDANGEROUS!",
   "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_3": "  §9Upon death, the Cyber Dog will destroy everything.",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_6.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_6.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_6.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_6.description_4": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_6": "Cyber Dog Upgrade",
@@ -55,7 +55,7 @@
   "item.choups_cyber_dogs.cyber_dog_upgrade_7.description_0": "",
   "item.choups_cyber_dogs.cyber_upgrade_8.description_3": "  §925% chance of drain the life of touched entities",
   "item.choups_cyber_dogs.cyber_upgrade_8.description_4": "",
-  "item.choups_cyber_dogs.cyber_upgrade_8.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_upgrade_8.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_upgrade_8": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_upgrade_8.description_2": " §7Activate the §9Vampire Module",
   "item.choups_cyber_dogs.cyber_upgrade_8.description_0": "",
@@ -139,12 +139,12 @@
   "item.choups_cyber_dogs.cyber_upgrade_9.description_2": " §7Activate the §9Slowness Module",
   "item.choups_cyber_dogs.cyber_upgrade_9.description_3": "  §9Inflicts Slowness on hit",
   "item.choups_cyber_dogs.cyber_upgrade_9.description_0": "",
-  "item.choups_cyber_dogs.cyber_upgrade_9.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_upgrade_9.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_upgrade_9.description_4": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_4": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_3": "  §9+4 Attack Damages",
   "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_10": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_2": " §7Activate the §9Strenght Module:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:"
+  "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:"
 }
