-Added the new Slot Upgrade Item and System -New config -New crafts

--- a/src/main/resources/assets/choups_cyber_dogs/lang/en_us.json
+++ b/src/main/resources/assets/choups_cyber_dogs/lang/en_us.json
@@ -3,7 +3,7 @@
   "item.choups_cyber_dogs.strange_circuit": "§eStrange Circuit",
   "item.choups_cyber_dogs.strange_circuit.description_0": "",
   "item.choups_cyber_dogs.strange_circuit.description_1": "§7When right clicked on a wild Wolf:",
-  "item.choups_cyber_dogs.strange_circuit.description_2": " §7Have a chance of transforming it into a §eCyber Dog§7!",
+  "item.choups_cyber_dogs.strange_circuit.description_2": " §7Has a chance of transforming it into a §eCyber Dog§7!",
   "item.choups_cyber_dogs.strange_circuit.description_3": " §7Tamed with §9Redstone",
   "subtitles.cyberdogambient": "",
   "subtitles.cyberdogdeath": "",
@@ -11,19 +11,19 @@
   "item.choups_cyber_dogs.strange_circuit.description_4": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade.description_3": "  §9Inflicts fire on hit",
   "item.choups_cyber_dogs.cyber_dog_upgrade.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade.description_2": " §7Activate the §9Fiery Module",
+  "item.choups_cyber_dogs.cyber_dog_upgrade.description_2": " §7Activates the §9Fiery Module",
   "item.choups_cyber_dogs.cyber_dog_upgrade": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_01_spawn_egg": "Cyber Dog Spawn Egg",
   "entity.choups_cyber_dogs.cyber_dog_01": "Cyber Dog",
   "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_3": "  §9+15% Speed",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_2": " §7Activate the §9Speed Module:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_2": " §7Activates the §9Speed Module:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_2.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_2": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_2": " §7Activate the §9Lightning Module:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_2": " §7Activates the §9Lightning Module:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_3": "  §925% chance of striking a lightning on hit",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_3.description_4": "",
@@ -33,9 +33,9 @@
   "item.choups_cyber_dogs.cyber_dog_upgrade_4": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_2": " §7Activate the §9Health Module:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_2": " §7Activates the §9Health Module:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_4.description_3": "  §9+10 Hearts",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_2": " §7Activate the §9NUKE Module:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_2": " §7Activates the §9NUKE Module:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_dog_upgrade_5.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_5": "Cyber Dog Upgrade",
@@ -46,18 +46,18 @@
   "item.choups_cyber_dogs.cyber_dog_upgrade_6.description_4": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_6": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_6.description_3": "  §9Inflicts Poison on hit",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_6.description_2": " §7Activate the §9Toxic Module",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_6.description_2": " §7Activates the §9Toxic Module",
   "item.choups_cyber_dogs.cyber_dog_upgrade_7.description_3": "  §9Inflicts Wither on hit",
   "item.choups_cyber_dogs.cyber_dog_upgrade_7": "Cyber Dog Upgrade",
   "item.choups_cyber_dogs.cyber_dog_upgrade_7.description_4": "",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_7.description_1": "§7When right cliked on a tamed Cyber Dog while sneaking:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_7.description_2": " §7Activate the §9Wither Module",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_7.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_7.description_2": " §7Activates the §9Wither Module",
   "item.choups_cyber_dogs.cyber_dog_upgrade_7.description_0": "",
-  "item.choups_cyber_dogs.cyber_upgrade_8.description_3": "  §925% chance of drain the life of touched entities",
+  "item.choups_cyber_dogs.cyber_upgrade_8.description_3": "  §925% chance of draining the life of touched entities",
   "item.choups_cyber_dogs.cyber_upgrade_8.description_4": "",
   "item.choups_cyber_dogs.cyber_upgrade_8.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
   "item.choups_cyber_dogs.cyber_upgrade_8": "Cyber Dog Upgrade",
-  "item.choups_cyber_dogs.cyber_upgrade_8.description_2": " §7Activate the §9Vampire Module",
+  "item.choups_cyber_dogs.cyber_upgrade_8.description_2": " §7Activates the §9Vampire Module",
   "item.choups_cyber_dogs.cyber_upgrade_8.description_0": "",
   "item.choups_cyber_dogs.scanner.description_2": " §9Displays all installed modules!",
   "item.choups_cyber_dogs.scanner.description_3": "",
@@ -136,7 +136,7 @@
   "advancements.scanner_advancement.title": "Scanner",
   "advancements.scanner_advancement.descr": "Craft a Scanner",
   "item.choups_cyber_dogs.cyber_upgrade_9": "Cyber Dog Upgrade",
-  "item.choups_cyber_dogs.cyber_upgrade_9.description_2": " §7Activate the §9Slowness Module",
+  "item.choups_cyber_dogs.cyber_upgrade_9.description_2": " §7Activates the §9Slowness Module",
   "item.choups_cyber_dogs.cyber_upgrade_9.description_3": "  §9Inflicts Slowness on hit",
   "item.choups_cyber_dogs.cyber_upgrade_9.description_0": "",
   "item.choups_cyber_dogs.cyber_upgrade_9.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
@@ -145,6 +145,12 @@
   "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_3": "  §9+4 Attack Damages",
   "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_0": "",
   "item.choups_cyber_dogs.cyber_dog_upgrade_10": "Cyber Dog Upgrade",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_2": " §7Activate the §9Strenght Module:",
-  "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:"
+  "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_2": " §7Activates the §9Strenght Module:",
+  "item.choups_cyber_dogs.cyber_dog_upgrade_10.description_1": "§7When right clicked on a tamed Cyber Dog while sneaking:",
+  "item.choups_cyber_dogs.slot_upgrade": "Slot Upgrade",
+  "item.choups_cyber_dogs.slot_upgrade.description_3": " §9Max \u003d 5!",
+  "item.choups_cyber_dogs.slot_upgrade.description_4": "",
+  "item.choups_cyber_dogs.slot_upgrade.description_1": "§7When right clicked on a Cyber Dog:",
+  "item.choups_cyber_dogs.slot_upgrade.description_2": " §9Increases the Cyber Dog slot capacity",
+  "item.choups_cyber_dogs.slot_upgrade.description_0": ""
 }
