-Added the Cyber Shears -Spawn a Cyber dog is now obtional and set by false by default -Added a loot pool -New recipes -Bug fixes

--- a/src/main/resources/assets/choups_cyber_dogs/lang/en_us.json
+++ b/src/main/resources/assets/choups_cyber_dogs/lang/en_us.json
@@ -152,5 +152,11 @@
   "item.choups_cyber_dogs.slot_upgrade.description_4": "",
   "item.choups_cyber_dogs.slot_upgrade.description_1": "§7When right clicked on a Cyber Dog:",
   "item.choups_cyber_dogs.slot_upgrade.description_2": " §9Increases the Cyber Dog slot capacity",
-  "item.choups_cyber_dogs.slot_upgrade.description_0": ""
+  "item.choups_cyber_dogs.slot_upgrade.description_0": "",
+  "item.choups_cyber_dogs.cyber_shears.description_3": " §9Removes all its attached modules.",
+  "item.choups_cyber_dogs.cyber_shears.description_2": "§7When right clicked on a Cyber Dog:",
+  "item.choups_cyber_dogs.cyber_shears.description_4": "",
+  "item.choups_cyber_dogs.cyber_shears.description_1": "§7§oWorks as Shears!",
+  "item.choups_cyber_dogs.cyber_shears.description_0": "",
+  "item.choups_cyber_dogs.cyber_shears": "§eCyber Shears"
 }
